constructors cannot be getters/setters; 26 failing